Complete Redis and Celery worker implementation with session management
  Implemented complete Redis session management and Celery worker functionality
  for the Phishly phishing simulation platform, including database integration,
  email rendering, SMTP sending, and comprehensive code quality tooling.

  ## Redis Enhancements (/redis)
  - Enhanced redis.conf with session expiration tracking (keyspace notifications)
  - Created session_manager.py: CLI utility for managing Flask sessions
    - List, get, delete, and extend session operations
    - Session statistics and cleanup functionality
    - Full Redis session lifecycle management
  - Created SESSION_STRUCTURE.md: comprehensive session documentation
    - Session data structure and field definitions
    - Security considerations (CSRF, IP validation, MFA)
    - Management commands and troubleshooting guide

  ## Celery Worker Implementation (/worker)
  - Created database.py: SQLAlchemy models and database layer
    - Models for all database tables (campaigns, targets, templates, etc.)
    - Connection pooling and session management
    - Query functions for campaign/target data
    - Event logging and status update functions

  - Created email_renderer.py: Jinja2 email template rendering
    - HTML and text email rendering with variable substitution
    - Automatic tracking pixel injection
    - Phishing link generation with unique tokens
    - Template validation and example templates

  - Created email_sender.py: SMTP email sending
    - Multipart email support (HTML + text fallback)
    - TLS/SSL support for multiple SMTP providers
    - Mock sender for development (logs instead of sending)
    - Pre-configured settings for Gmail, Outlook, SendGrid, etc.

  - Enhanced tasks.py: Complete Celery task implementation
    - Full send_phishing_email implementation with database integration
    - Automatic retry logic (3 attempts, 60s delay)
    - New tasks: send_campaign_batch, test_smtp_connection, test_database

--- a/redis/redis.conf
+++ b/redis/redis.conf
@@ -31,6 +31,11 @@ databases 16  # Support 16 databases (0-15)
 loglevel notice
 logfile ""  # Log to stdout (captured by Podman logs)
 
+# === SESSION MANAGEMENT ===
+# Session expiration tracking (used by Flask-Session and custom logic)
+# Notify on expiration events for cleanup (future use)
+notify-keyspace-events Ex
+
 # === PERFORMANCE ===
 # Disable slow operations for better performance
 slowlog-log-slower-than 10000  # Log queries slower than 10ms
