--- a/worker/.env.template
+++ b/worker/.env.template
@@ -12,3 +12,17 @@ POSTGRES_PORT=5432
 POSTGRES_DB=phishly
 POSTGRES_USER=
 POSTGRES_PASSWORD=
+
+# SMTP Configuration
+# Set SMTP_MOCK=true to log emails instead of sending (for development)
+SMTP_MOCK=true
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=
+SMTP_PASSWORD=
+SMTP_USE_TLS=true
+SMTP_USE_SSL=false
+
+# Phishing Domain Configuration
+# Domain where phishing landing pages are hosted
+PHISHING_DOMAIN=phishing.example.com
