--- a/worker/requirements.txt
+++ b/worker/requirements.txt
@@ -19,6 +19,11 @@ psycopg2-binary==2.9.9    # PostgreSQL driver
 # mailgun==0.1.1          # Mailgun API (future)
 
 # ============================================
+# Email Rendering
+# ============================================
+Jinja2==3.1.2             # Template rendering for emails
+
+# ============================================
 # Utilities
 # ============================================
 python-dotenv==1.0.0
