--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,103 @@
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "phishly"
 version = "0.1.0"
-description = "Add your description here"
+description = "Phishing simulation platform for security awareness training"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "alembic>=1.17.2",
-    "black==23.12.1",
-    "flake8==6.1.0",
     "psycopg2-binary>=2.9.11",
-    "pytest==7.4.3",
     "python-dotenv==1.0.0",
     "sqlalchemy>=2.0.45",
+]
+
+[tool.setuptools]
+packages = []  # No packages to install, just use for dev tools
+
+[project.optional-dependencies]
+dev = [
+    "black==23.12.1",
+    "flake8==6.1.0",
+    "flake8-docstrings==1.7.0",
+    "flake8-bugbear==23.12.2",
+    "mypy==1.7.1",
+    "pylint==3.0.3",
+    "isort==5.13.2",
+    "pytest==7.4.3",
+    "pytest-cov==4.1.0",
+]
+
+[tool.black]
+line-length = 100
+target-version = ['py312']
+include = '\.pyi?$'
+extend-exclude = '''
+/(
+  # directories
+  \.eggs
+  | \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | build
+  | dist
+)/
+'''
+
+[tool.isort]
+profile = "black"
+line_length = 100
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
+
+[tool.mypy]
+python_version = "3.12"
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = false
+disallow_incomplete_defs = false
+check_untyped_defs = true
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_no_return = true
+warn_unreachable = true
+strict_equality = true
+
+[tool.pylint.messages_control]
+max-line-length = 100
+disable = [
+    "C0111",  # missing-docstring
+    "C0103",  # invalid-name
+    "R0903",  # too-few-public-methods
+    "R0913",  # too-many-arguments
+    "W0212",  # protected-access
+]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+addopts = "-v --cov=. --cov-report=term-missing"
+
+[dependency-groups]
+dev = [
+    "black==23.12.1",
+    "flake8==6.1.0",
+    "flake8-bugbear==23.12.2",
+    "flake8-docstrings==1.7.0",
+    "isort==5.13.2",
+    "mypy==1.7.1",
+    "pylint==3.0.3",
+    "pytest==7.4.3",
+    "pytest-cov==4.1.0",
 ]
